--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *~
 *.class
-war/WEB-INF/deploy/cangatoo/symbolMaps/*
-war/cangatoo/*.cache.png
+war/WEB-INF/deploy/cangantoo/symbolMaps/*
+war/cangantoo/*.cache.*
 gwt-unitCache/*
+war/cangantoo/*.gwt.rpc
+war/WEB-INF/deploy/cangantoo/rpcPolicyManifest/manifests/*
